
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct list_head {struct list_head* next; struct list_head* prev; } ;



__attribute__((used)) static void plist_set_next(struct list_head *node, struct list_head *head)
{
 node->next = head;
 head->prev = node;
 node->prev = head;
 head->next = node;
}
